# mapping-walker

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: style.json
src/mapping_walker/ext_schemas/: oxo.py  oxo.yaml
src/mapping_walker/pipeline/: pipeline.py  pipeline_config.py  pipeline_config.yaml
src/mapping_walker/utils/: oxo_utils.py  sssom_utils.py
src/mapping_walker/walkers/: endpoints.py  mapping_walker.py
tests/: __init__.py  test_bioportal_endpoint.py  test_boomer.py  test_mapping_walker.py  test_oxo_endpoint.py  test_oxo_walker.py  test_schema.py
tests/input/: neoplasm.sssom.yaml  oxo-example-uberon.json  oxo-walk.yaml
