[tool.poetry]
name = "mapping-walker"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
sssom = "^0.3.7"
bioregistry = "^0.4.76"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mapcrawl = "mapping_walker.pipeline.pipeline:main"
